--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="SAMBAT Pro - Professional Credit Card Generator">
     
-    <title>ReNamso Pro - Professional Credit Card Generator | Testing Tools</title>
+    <title>SAMBAT Pro - Professional Credit Card Generator | Testing Tools</title>
     
     <!-- Modern Fonts & Icons -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -846,4 +846,5 @@
     </script>
 </body>
 </html>
+
 
