--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="robots" content="index, follow">
     
     <!-- Open Graph & Twitter -->
-    <meta property="og:title" content="ReNamso Pro - Professional Credit Card Generator">
+    <meta property="og:title" content="SAMBAT Pro - Professional Credit Card Generator">
     <meta property="og:description" content="Advanced test card generator for payment system testing. Custom BIN patterns, Luhn validation, multiple formats.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yourdomain.pages.dev/">
@@ -846,5 +846,6 @@
     </script>
 </body>
 </html>
+
 
 
