--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
     <div class="container">
         <!-- Header -->
         <div class="header fade-in-up">
-            <h1>ReNamso <span style="background: linear-gradient(135deg, var(--success), #059669);-webkit-background-clip: text;background-clip: text;-webkit-text-fill-color: transparent;">Pro</span></h1>
+            <h1>SAMBAT <span style="background: linear-gradient(135deg, var(--success), #059669);-webkit-background-clip: text;background-clip: text;-webkit-text-fill-color: transparent;">Pro</span></h1>
             <p class="lead">Professional test card generator for developers, QA teams & payment systems. Luhn-validated, production-ready.</p>
         </div>
 
@@ -846,6 +846,7 @@
     </script>
 </body>
 </html>
+
 
 
 
