--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
     <meta name="robots" content="index, follow">
 
     <!-- Open Graph Tags -->
-    <meta property="og:title" content="ReNamso - Free Credit Card Generator">
+    <meta property="og:title" content="SAMBAT - Free Credit Card Generator">
     <meta property="og:description" content="Free online credit card generator for testing and development. Generate valid card numbers with custom BIN patterns.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://uncoder.eu.org/cc-gen/">
-    <meta property="og:image" content="https://uncoder.eu.org/cc-gen/renamso.svg">
+    
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="ReNamso - Free Credit Card Generator">
+    <meta name="twitter:title" content="SAMBAT - Free Credit Card Generator">
     <meta name="twitter:description" content="Free tool to generate test credit card numbers for development and testing purposes.">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://uncoder.eu.org/cc-gen/">
 
-    <title>ReNamso - Free Credit Card Generator | UNCODER</title>
+    <title>SAMBAT - Free Credit Card Generator | UNCODER</title>
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -831,7 +831,7 @@
                         <i class="fas fa-credit-card"></i>
                     </div>
                     <div class="brand-text">
-                        <h1><span>RENAMSO</span></h1>
+                        <h1><span>SAMBAT</span></h1>
                         <div class="brand-tag">ADVANCED CARD GENERATOR</div>
                     </div>
                 </div>
@@ -1640,3 +1640,4 @@
     </script>
 </body>
 </html>
+
